--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -113,8 +113,7 @@ casting-engine-unit=直接用熔融铁和活性炭铸造发动机单元，跳过
 titanium-barrels=解锁轻质钛合金桶，堆叠数量是钢桶的两倍，可更多数量装载到火箭上，且能安全运输最难储存的流体。
 deep_sea_oil_extraction=允许使用石油钻井平台从深海开采资源。
 titanium-technology=解锁钛金属加工工艺。
-heavy-gun-turret=钛合金强化过后的重型机枪炮塔
-射速是标准版的三倍，射程相同且防护能力大幅提升，完美适用于高强度防御场景。
+heavy-gun-turret=钛合金强化过后的重型机枪炮塔射速是标准版的三倍，射程相同且防护能力大幅提升，完美适用于高强度防御场景。
 diesel-agriculture=液体燃料发动机驱动的农业种植技术。
 pelagos-asteroid-bioprocessing=允许生物室处理小行星资源。
 ethanol-thruster=由轻质钛合金锻造，以纯乙醇为燃料，无需氧化剂即可提供清洁高效的推力。
