started working on diesel-dragon

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -29,6 +29,7 @@ ethanol-thruster=Ethanol thruster
 lighthouse=Lighthouse
 diesel-asteroid-collector=Diesel asteroid collector
 steam-inserter=Steam inserter
+diesel-dragon=Diesel dragon
 
 
 [entity-description]
@@ -159,6 +160,7 @@ lighthouse=Lighthouse
 diesel-asteroid-collector=Diesel asteroid collector
 steam-inserter=Steam inserter
 portable-diesel-generator=Portable diesel generator
+diesel-dragon=Diesel dragon
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
