--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -51,6 +51,7 @@ methane=Methane
 coconut-oil=Coconut oil
 ethanol=Ethanol
 titanium-sludge=Titanium sludge
+biodiesel=Biodiesel
 
 [fluid-description]
 methane=A flammable gas, useful as a fuel and chemical precursor.
@@ -74,7 +75,7 @@ diesel-mining-drill=Diesel mining drill
 diesel-automation=Diesel automation
 canex-excavator=Diesel excavator
 Pirate_Ship=Galleon weaponary
-casting-engine-unit=Engine unit casting
+pelagos-casting-engine-unit=Engine unit casting
 titanium-barrels=Titanium barrels
 copper-biter-captivity=Copper spitter captivity
 cultivation-productivity=Cultivation productivity
@@ -91,6 +92,7 @@ diesel-asteroid-collector=Diesel asteroid collector
 crane-stack-diesel-inserter=Crane stack diesel inserter
 portable-diesel-generator=Portable diesel generator
 coconut-drop-technology=Coconut drop technology
+pelagos-biodiesel=Biodiesel
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -108,7 +110,7 @@ diesel-mining-drill=Extracts resources using mighty diesel power, independent of
 diesel-automation=Enables fuel-powered machines that run on liquid fuels instead of electricity. Allows off-grid automation but requires constant fuel supply.
 canex-excavator=Excavate water channels using power of liquid fuels
 Pirate_Ship=Allows galleon to be armed with deadly cannonballs.
-casting-engine-unit=Cast engine units directly from molten iron and activated carbon, bypassing traditional machining. Provides a more efficient metallurgical route to produce engines.
+pelagos-casting-engine-unit=Cast engine units directly from molten iron and activated carbon, bypassing traditional machining. Provides a more efficient metallurgical route to produce engines.
 titanium-barrels=Enables lightweight titanium barrels that stack twice as well as steel barrels, can be loaded in greater numbers onto rockets, and allow safe transport of even the most hard-to-store fluids.
 deep_sea_oil_extraction=Allows for using oil rigs to mine resources from the depths
 titanium-technology=Enables titanium processing
@@ -121,6 +123,7 @@ diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel e
 crane-stack-diesel-inserter=A specialized fuel-powered crane engineered for precise bulk transfer. Works like a stack inserter: \nIt gathers a full stack of items before swinging, enabling dense layered placement on belts. Its heavy-duty grab mechanism allows it to hold and move entire stacks at once, merging the lifting capacity of a crane with the accuracy of a stack inserter.
 portable-diesel-generator=A reinforced portable diesel core designed for the harsh, salty winds of Pelagos. When fed barrels of fuel, it overwhelms even the Fission Reactor’s output.
 coconut-drop-technology=You can drop coconuts on Cerys surface even before blasting hole in magnetosphere.
+pelagos-biodiesel=Refine processed biomass into biodiesel, providing a sustainable alternative to traditional fuel sources.
 
 [item-name]
 coconut=Coconut
@@ -224,7 +227,7 @@ calciner-advanced-steel-smelting=Advanced steel smelting
 pelagos-battery=Activated carbon battery
 pelagos-rocket-part=Pelagos rocket part
 pelagos-biolubricant=Pelagos biolubricant
-casting-engine-unit=Engine unit casting
+pelagos-casting-engine-unit=Engine unit casting
 empty-filled-titanium-barrel=Empty __1__ titanium barrel
 fill-titanium-barrel=Fill __1__ titanium barrel
 aps-pelagos-automation-science-pack=Pelagos automaition science pack
@@ -245,6 +248,8 @@ titanium-plate-from-dust=Titanium plate from dust
 steam-inserter=Steam inserter
 steam-inserter-iron-pipe=Steam inserter
 steam-assembling-machine-iron-pipe=Steam assembling machine
+pelagos-biodiesel-tree=Biodiesel from tree seed
+pelagos-biodiesel-bioflux=Biodiesel from bioflux
 
 [mod-setting-name]
 pelagos-allow-fishing=Allow inserters to catch fish (overrides cargo-ships settings)
