--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -250,6 +250,7 @@ steam-inserter-iron-pipe=Steam inserter
 steam-assembling-machine-iron-pipe=Steam assembling machine
 pelagos-biodiesel-tree=Biodiesel from tree seed
 pelagos-biodiesel-bioflux=Biodiesel from bioflux
+pelagos-biodiesel-solid-fuel=Solid fuel from biodiesel
 
 [mod-setting-name]
 pelagos-allow-fishing=Allow inserters to catch fish (overrides cargo-ships settings)
