--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -93,6 +93,7 @@ crane-stack-diesel-inserter=Crane stack diesel inserter
 portable-diesel-generator=Portable diesel generator
 coconut-drop-technology=Coconut drop technology
 pelagos-biodiesel=Biodiesel
+improvised-concrete=Improvised concrete
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -124,6 +125,7 @@ crane-stack-diesel-inserter=A specialized fuel-powered crane engineered for prec
 portable-diesel-generator=A reinforced portable diesel core designed for the harsh, salty winds of Pelagos. When fed barrels of fuel, it overwhelms even the Fission Reactor’s output.
 coconut-drop-technology=You can drop coconuts on Cerys surface even before blasting hole in magnetosphere.
 pelagos-biodiesel=Refine processed biomass into biodiesel, providing a sustainable alternative to traditional fuel sources.
+improvised-concrete=Allows creating improvised concrete using locally available biomass and decomposed materials.
 
 [item-name]
 coconut=Coconut
