--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -123,7 +123,7 @@ lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and
 diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
 crane-stack-diesel-inserter=A specialized fuel-powered crane engineered for precise bulk transfer. Works like a stack inserter: \nIt gathers a full stack of items before swinging, enabling dense layered placement on belts. Its heavy-duty grab mechanism allows it to hold and move entire stacks at once, merging the lifting capacity of a crane with the accuracy of a stack inserter.
 portable-diesel-generator=A reinforced portable diesel core designed for the harsh, salty winds of Pelagos. When fed barrels of fuel, it overwhelms even the Fission Reactor’s output.
-coconut-drop-technology=You can drop coconuts on Cerys surface even before blasting hole in magnetosphere.
+coconut-drop-technology=You can drop coconuts on Cerys surface even before blasting hole in magnetosphere and ignore sandy atmosphere of Arig to drop coconuts there as well.
 pelagos-biodiesel=Refine processed biomass into biodiesel, providing a sustainable alternative to traditional fuel sources.
 improvised-concrete=Allows creating improvised concrete using locally available biomass and decomposed materials.
 
@@ -252,6 +252,7 @@ steam-inserter-iron-pipe=Steam inserter
 steam-assembling-machine-iron-pipe=Steam assembling machine
 pelagos-biodiesel-tree=Biodiesel from tree seed
 pelagos-biodiesel-bioflux=Biodiesel from bioflux
+pelagos-biodiesel-arig-cactus=Biodiesel from cactus
 pelagos-biodiesel-solid-fuel=Solid fuel from biodiesel
 cococoncrete=Cococoncrete
 pelagos-spoilage-concrete=Spoilage concrete
