--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -222,13 +222,13 @@ calciner-fish-calcining=Fish calcining
 calciner-coal-purification=Coal purification
 calciner-wood-carbonization=Wood carbonization
 calciner-coconut-husk-carbonization=Coconut husk carbonization
-calcite-concrete=Calcite concrete
+calciner-calcite-brick=Calcite brick 
 pelagos-maraxsis-super-sealant-substance=Sealant calcination
 activated-carbon=Activated carbon
 calciner-advanced-steel-smelting=Advanced steel smelting
 pelagos-battery=Activated carbon battery
 pelagos-rocket-part=Pelagos rocket part
-pelagos-biolubricant=Pelagos biolubricant
+pelagos-biolubricant=Coconut lubricant
 pelagos-casting-engine-unit=Engine unit casting
 empty-filled-titanium-barrel=Empty __1__ titanium barrel
 fill-titanium-barrel=Fill __1__ titanium barrel
@@ -252,6 +252,7 @@ steam-inserter-iron-pipe=Steam inserter
 steam-assembling-machine-iron-pipe=Steam assembling machine
 pelagos-biodiesel-tree=Biodiesel from tree seed
 pelagos-biodiesel-bioflux=Biodiesel from bioflux
+pelagos-biodiesel-spoilage=Biodiesel from spoilage
 pelagos-biodiesel-arig-cactus=Biodiesel from cactus
 pelagos-biodiesel-solid-fuel=Solid fuel from biodiesel
 cococoncrete=Cococoncrete
