multi surface recipe

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -166,6 +166,7 @@ diesel-asteroid-collector=Diesel asteroid collector
 steam-inserter=Steam inserter
 portable-diesel-generator=Portable diesel generator
 diesel-dragon=Diesel dragon
+msppr-pelagos=Decomposed promethium
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
