fermented fish fermentation bacteria breeding

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -209,7 +209,8 @@ improvised-landfill=Improvised landfill
 pelagos-bioplastic=Pelagos bioplastic
 pelagos-processing-unit=Ethanol processing unit
 pelagos-rocket-fuel=Sealant rocket fuel
-fermentation-bacteria-cultivation=Fermentation bacteria cultivation
+fermentation-bacteria-cultivation=Fermentation bacteria cultivation (fish)
+fermentation-bacteria-cultivation-fermented-fish=Fermentation bacteria cultivation (fermented fish)
 pelagos-electric-engine-unit=Coconut oil electric engine
 pelagos-biochamber=Fermentation bacteria biochamber
 nutrients-from-coconut-meat=Coconutrients
