long-handed-diesel-inserter

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -20,6 +20,7 @@ behemoth-copper-biter=Behemoth copper spitter
 leviathan-copper-biter=Leviathan copper spitter
 pelagos-copper-stromatolite=Pelagos copper stromatolite
 fast-diesel-inserter=Fast diesel inserter
+long-handed-diesel-inserter=Long handed diesel inserter
 heavy-gun-turret=Heavy gun turret
 diesel-agricultural-tower=Diesel agricultural tower
 pelagos-titanium-coral=Titanium coral
@@ -141,6 +142,7 @@ degradation-module-3=Degradation module 3
 poison-rocket=Poison capsule rocket
 slowdown-rocket=Slowdown capsule rocket
 activated-carbon=Activated carbon
+long-handed-diesel-inserter=Long handed diesel inserter
 diesel-inserter=Extra long handed diesel inserter
 diesel-mining-drill=Diesel mining drill
 diesel-assembling-machine=Diesel assembling machine
@@ -179,9 +181,10 @@ fermentation-bacteria=Microorganisms cultivated for fermentation processes.
 degradation-module=Module that reduces quality and slightly boosts speed.
 diesel-mining-drill=Extracts resources using mighty diesel power, independent of the electric grid. Reliable but fuel-hungry.
 diesel-inserter=Fuel-powered inserter with extended reach thanks to its diesel engine. Works off-grid, but consumes fuel.
+long-handed-diesel-inserter=Fuel-powered long handed inserter. Works off-grid, but consumes fuel. 
 diesel-assembling-machine=A versatile assembling machine powered by diesel engine. Works independently of the electric grid, but consumes a constant stream of fuel.
 diesel-pump=A robust pump powered by liquid fuel. Transfers fluids without relying on electricity, ideal for off-grid fluid handling.
-fast-diesel-inserter=Fast diesel inserter
+fast-diesel-inserter=Powered by a diesel engine, it is much faster than its electric counterpart.
 corrosive-firearm-magazine=Projectile coated with a corrosive compound.\nCapable of breaking down asteroid stone as easily as it dissolves living tissue.
 diesel-agricultural-tower=Agricultural tower powered by liquid fuel engine.
 crane-bulk-diesel-inserter=A heavy-duty, fuel-powered crane designed for bulk cargo handling. It easily moves entire stacks in a single grab.\nPerfect for unloading ships or transferring items between large storage containers.
@@ -283,9 +286,7 @@ pelagos-fluid-value-based-flamethrower=Add every fluid with fuel value to flamet
 allow-galleon-before-pelagos=Unlocks galleon with steel axe research.
 pelagos-boat-friction=Small Boat friction. Less means boat is faster. This overrides cargo ships boat speed setting
 pelagos-methane-on-vesta=Changes vesta planet generation by removing methane tiles and adding methane stain that can be mined with oil rig. To make sure you can mine methane on Vesta, planet is locked behind oil rig
-pelagos-override-vesta-methane-fluid-icon=By default vesta have different methance fluid color icon than pelagos this setting allows you to pick option you like more
-
-
+pelagos-override-vesta-methane-fluid-icon=By default, Vesta uses a different methane fluid icon than Pelagos. Enabling this will make Vesta use Pelagos' icon for methane.
 [tips-and-tricks-item-name] 
 pelagos-briefing-main=Pelagos briefing 
 pelagos-coconuts-and-oil=Coconut processing
@@ -310,6 +311,10 @@ pirate-cannon=Galleon cannon
 [tile-name]
 wooden-platform=Wooden platform
 pelagos-deepsea=Pelagos deep sea
+pelagos-sand-1=Pelagos sand 1
+pelagos-sand-2=Pelagos sand 2
+pelagos-sand-3=Pelagos sand 3
+pelagos-sand-4=Pelagos sand 4
 
 [string-mod-setting]
 aps-planet-pelagos=[planet=pelagos] Pelagos
