--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -252,8 +252,8 @@ metallic-asteroid-methane-crushing=Metallic asteroid methane crushing
 carbonic-asteroid-gasification=Carbonic asteroid gasification
 oxide-asteroid-melting=Oxide asteroid melting
 titanium-plate-from-dust=Titanium plate from dust
-steam-inserter=Steam inserter
 steam-inserter-iron-pipe=Steam inserter
+steam-long-handed-inserter-iron-pipe=Steam long handed inserter
 steam-assembling-machine-iron-pipe=Steam assembling machine
 pelagos-biodiesel-tree=Biodiesel from tree seed
 pelagos-biodiesel-bioflux=Biodiesel from bioflux
