Project diesel dragon

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -95,6 +95,7 @@ portable-diesel-generator=Portable diesel generator
 coconut-drop-technology=Coconut drop technology
 pelagos-biodiesel=Biodiesel
 improvised-concrete=Improvised concrete
+project-diesel-dragon=Project diesel dragon
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -251,7 +252,7 @@ fast-diesel-inserter=Fast diesel inserter
 metallic-asteroid-methane-crushing=Metallic asteroid methane crushing
 carbonic-asteroid-gasification=Carbonic asteroid gasification
 oxide-asteroid-melting=Oxide asteroid melting
-titanium-plate-from-dust=Titanium plate from dust
+titanium-plate-from-dust=Titanium plate smelting
 steam-inserter-iron-pipe=Steam inserter
 steam-long-handed-inserter-iron-pipe=Steam long handed inserter
 steam-assembling-machine-iron-pipe=Steam assembling machine
@@ -262,6 +263,13 @@ pelagos-biodiesel-arig-cactus=Biodiesel from cactus
 pelagos-biodiesel-solid-fuel=Solid fuel from biodiesel
 cococoncrete=Cococoncrete
 pelagos-spoilage-concrete=Spoilage concrete
+advanced-titanium-plate-from-dust=Advanced titanium plate smelting
+pelagos-diesel-rocket-part=Pelagos diesel dragon rocket part
+gleba-diesel-rocket-part=Gleba diesel dragon rocket part
+fulgora-diesel-rocket-part=Fulgora diesel dragon rocket part
+aquilo-diesel-rocket-part=Aquilo diesel dragon rocket part
+nauvis-diesel-rocket-part=Nauvis diesel dragon rocket part
+vulcanus-diesel-rocket-part=Vulcanus diesel dragon rocket part
 
 [mod-setting-name]
 pelagos-allow-fishing=Allow inserters to catch fish (overrides cargo-ships settings)
