--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -128,6 +128,7 @@ portable-diesel-generator=A reinforced portable diesel core designed for the har
 coconut-drop-technology=You can drop coconuts on Cerys surface even before blasting hole in magnetosphere and ignore sandy atmosphere of Arig to drop coconuts there as well.
 pelagos-biodiesel=Refine processed biomass into biodiesel, providing a sustainable alternative to traditional fuel sources.
 improvised-concrete=Allows creating improvised concrete using locally available biomass and decomposed materials.
+project-diesel-dragon=The pinnacle of diesel engineering: a liquid-fueled rocket-silo that ignores the power grid and brute-forces its way to orbit. Unlocks the Diesel Dragon.
 
 [item-name]
 coconut=Coconut
