--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -264,6 +264,7 @@ pelagos-biodiesel-arig-cactus=Biodiesel from cactus
 pelagos-biodiesel-solid-fuel=Solid fuel from biodiesel
 cococoncrete=Cococoncrete
 pelagos-spoilage-concrete=Spoilage concrete
+nutrients-from-spoilage-methane=Methane-assisted nutrients from spoilage 
 advanced-titanium-plate-from-dust=Advanced titanium plate smelting
 pelagos-diesel-rocket-part=Pelagos diesel dragon rocket part
 gleba-diesel-rocket-part=Gleba diesel dragon rocket part
@@ -283,6 +284,8 @@ allow-galleon-before-pelagos=Allow galleon before pelagos
 pelagos-boat-friction=Boat friction
 pelagos-methane-on-vesta=Replace Vesta methane tiles with Pelagos methane stain
 pelagos-override-vesta-methane-fluid-icon=Override Vesta methane icon with Pelagos icon
+pelagos-contribute-to-aquilo-discovery=Decomposition science pack is needed to unlock and research aquilo
+pelagos-contribute-to-promethium-science=Decomposition science pack is needed to unlock and research promethium technology
 
 
 [mod-setting-description]
