the sandfill update

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -171,6 +171,8 @@ steam-inserter=Steam inserter
 portable-diesel-generator=Portable diesel generator
 diesel-dragon=Diesel dragon
 msppr-pelagos=Decomposed promethium
+pelagos-sandfill=Sandfill
+sand=Sand
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
@@ -195,6 +197,7 @@ lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and
 diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
 crane-stack-diesel-inserter=Fuel-powered belt stacking crane. Collects a full stack before transferring, allowing layered belt loading with crane-level throughput capacity.
 portable-diesel-generator=A reinforced portable diesel core designed for the harsh, salty winds of Pelagos. When fed barrels of fuel, it overwhelms even the Fission Reactor’s output.
+pelagos-sandfill=Landfill made of sand. Don't absorb pollution, can be used as artificial soil for coconut palm.
 
 [autoplace-control-names]
 methane=Methane
@@ -326,6 +329,7 @@ pelagos-sand-1=Pelagos sand 1
 pelagos-sand-2=Pelagos sand 2
 pelagos-sand-3=Pelagos sand 3
 pelagos-sand-4=Pelagos sand 4
+pelagos-sandfill=Sandfill
 
 [string-mod-setting]
 aps-planet-pelagos=[planet=pelagos] Pelagos
