--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -197,7 +197,7 @@ lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and
 diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
 crane-stack-diesel-inserter=Fuel-powered belt stacking crane. Collects a full stack before transferring, allowing layered belt loading with crane-level throughput capacity.
 portable-diesel-generator=A reinforced portable diesel core designed for the harsh, salty winds of Pelagos. When fed barrels of fuel, it overwhelms even the Fission Reactor’s output.
-pelagos-sandfill=Landfill made of sand. Don't absorb pollution, can be used as artificial soil for coconut palm.
+pelagos-sandfill=Landfill made of sand. It doesn't absorb pollution and can be used as artificial soil for coconut palm.
 
 [autoplace-control-names]
 methane=Methane
