--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -275,6 +275,7 @@ fulgora-diesel-rocket-part=Fulgora diesel dragon rocket part
 aquilo-diesel-rocket-part=Aquilo diesel dragon rocket part
 nauvis-diesel-rocket-part=Nauvis diesel dragon rocket part
 vulcanus-diesel-rocket-part=Vulcanus diesel dragon rocket part
+stone-erosion=Stone erosion
 
 [mod-setting-name]
 pelagos-allow-fishing=Allow inserters to catch fish (overrides cargo-ships settings)
