castra support, nuclear pollution no silo reduction

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -276,6 +276,7 @@ aquilo-diesel-rocket-part=Aquilo diesel dragon rocket part
 nauvis-diesel-rocket-part=Nauvis diesel dragon rocket part
 vulcanus-diesel-rocket-part=Vulcanus diesel dragon rocket part
 stone-erosion=Stone erosion
+calciner-mineral-glass=Mineral glass
 
 [mod-setting-name]
 pelagos-allow-fishing=Allow inserters to catch fish (overrides cargo-ships settings)
