galleon on waterway

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -285,7 +285,7 @@ pelagos-boat-inventory=Boat inventory size (overrides cargo-ships settings)
 pelagos-cargoship-inventory=Cargo ship inventory size(overrides cargo-ships settings)
 pelagos-tanker-capacity=Tanker Capacity (overrides cargo-ships settings)
 pelagos-fluid-value-based-flamethrower=Fluid value based flamethrower-turret dmg
-allow-galleon-before-pelagos=Allow galleon before pelagos
+allow-galleon-before-pelagos=Allow galleon and port before pelagos
 pelagos-boat-friction=Boat friction
 pelagos-methane-on-vesta=Replace Vesta methane tiles with Pelagos methane stain
 pelagos-override-vesta-methane-fluid-icon=Override Vesta methane icon with Pelagos icon
@@ -299,7 +299,7 @@ pelagos-force-small-electric-generator=The Pelagos Force Small Electric Generato
 pelagos-boat-inventory=The default value for boat inventory was too high, so it has been reduced to a smaller value. (default in cargo ships 80)
 pelagos-cargoship-inventory=The default value for cargo ship inventory was too high, so it has been reduced to a smaller value. (default in cargo ships 1000)
 pelagos-tanker-capacity=The default value for tanker capacity was too high, so it has been reduced to a smaller value. (default in cargo ships 250000)
-allow-galleon-before-pelagos=Unlocks galleon with steel axe research.
+allow-galleon-before-pelagos=Unlocks galleon and port with steel axe research.
 pelagos-boat-friction=Small Boat friction. Less means boat is faster. This overrides cargo ships boat speed setting
 pelagos-methane-on-vesta=Changes vesta planet generation by removing methane tiles and adding methane stain that can be mined with oil rig. To make sure you can mine methane on Vesta, planet is locked behind oil rig
 pelagos-override-vesta-methane-fluid-icon=By default, Vesta uses a different methane fluid icon than Pelagos. Enabling this will make Vesta use Pelagos' icon for methane.
