--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -277,6 +277,7 @@ nauvis-diesel-rocket-part=Nauvis diesel dragon rocket part
 vulcanus-diesel-rocket-part=Vulcanus diesel dragon rocket part
 stone-erosion=Stone erosion
 calciner-mineral-glass=Mineral glass
+nutrients-spoiling=Nutrients spoiling
 
 [mod-setting-name]
 pelagos-allow-fishing=Allow inserters to catch fish (overrides cargo-ships settings)
